--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -11,5 +11,5 @@ jobs:
     - name: Publish
       uses: netlify/actions/build@master
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
