--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -7,7 +7,7 @@ jobs:
 
     steps:
       - name: Checkout code
-      - uses: actions/checkout@master
+        uses: actions/checkout@master
       
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
