--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,24 +1,27 @@
+name: Build and Deploy to Netlify
 on: push
-name: Publish on Netlify
 
 jobs:
-  deploy:
+  build:
+    # 2. Using the latest Ubuntu image
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@master
-      
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+      # Check out the current repository code
+      - uses: actions/checkout@v1
+      # 3. https://github.com/actions/setup-node#usage
+      - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - run: npm install
-      - run: npm run build --if-present
-
-      
-      - name: Publish
-        uses: netlify/actions/build@master
+          node-version: "12.x"
+      - run: yarn install
+      # This triggers `docusaurus build` script in "package.json"
+      - run: yarn run build
+      # 4. Deploy the docusaurus build to Netlify
+      - uses: netlify/actions/cli@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        with:
+          # 5. "gatsby build" creates "public" folder, which is what we are deploying
+          args: deploy --dir=public --prod
+          secrets: '["GITHUB_TOKEN", "NETLIFY_SITE_ID"]'
