--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -19,9 +19,9 @@ jobs:
       # 4. Deploy the docusaurus build to Netlify
       - uses: netlify/actions/cli@master
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
-          # 5. "gatsby build" creates "public" folder, which is what we are deploying
+          # 5. "docusaurus build" creates "public" folder, which is what we are deploying
           args: deploy --dir=public --prod
-          secrets: '["GITHUB_TOKEN", "NETLIFY_SITE_ID"]'
+          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
