--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -23,5 +23,5 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           # 5. "docusaurus build" creates "public" folder, which is what we are deploying
-          args: deploy --dir=public --prod
+          args: deploy --dir=build --prod
           secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
