--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -25,3 +25,16 @@ jobs:
           # 5. "docusaurus build" creates "public" folder, which is what we are deploying
           args: deploy --dir=build --prod
           secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+    
+      - name: Add comment to PR
+        if: contains(github.event.comment.body, 'special string')
+        env:
+          URL: ${{ github.event.issue.comments_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          curl \
+            -X POST \
+            $URL \
+            -H "Content-Type: application/json" \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            --data '{ "body": "blah blah" }'
