--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -26,15 +26,10 @@ jobs:
           args: deploy --dir=build --prod
           secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
     
-      - name: Add comment to PR
-        if: contains(github.event.comment.body, 'special string')
+      - name: comment PR
+        uses: unsplash/comment-on-pr@master
         env:
-          URL: ${{ github.event.issue.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl \
-            -X POST \
-            $URL \
-            -H "Content-Type: application/json" \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            --data '{ "body": "blah blah" }'
+        with:
+          msg: "Check out this message!"
+          check_for_duplicate_msg: false  # OPTIONAL 
