--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,30 +1,35 @@
-name: Development workflow
-
-on:
-  push:
-    branches:
-      - dev
+name: Build and Deploy to Netlify
+on: [push, pull_request]
 
 jobs:
-  deploy:
+  build:
+    # 2. Using the latest Ubuntu image
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # Check out the current repository code
       - uses: actions/checkout@v1
-      
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
+      # 3. https://github.com/actions/setup-node#usage
+      - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - run: yarn
-      - run: yarn run build --if-present
-
-      - name: Deploy to netlify
-        uses: netlify/actions/cli@master
+          node-version: "12.x"
+      - run: yarn install
+      # This triggers `docusaurus build` script in "package.json"
+      - run: yarn run build
+      # 4. Deploy the docusaurus build to Netlify
+      - uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.DEV_NETLIFY_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
+          # 5. "docusaurus build" creates "public" folder, which is what we are deploying
           args: deploy --dir=build --prod
           secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+    
+      - name: comment PR
+        uses: unsplash/comment-on-pr@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          msg: "Check out this message!"
+          check_for_duplicate_msg: false  # OPTIONAL 
