--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,5 +1,5 @@
 name: Build and Deploy to Netlify
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -16,6 +16,7 @@ jobs:
       - run: yarn install
       # This triggers `docusaurus build` script in "package.json"
       - run: yarn run build
+        id: build_netlify
       # 4. Deploy the docusaurus build to Netlify
       - uses: netlify/actions/cli@master
         env:
@@ -23,7 +24,7 @@ jobs:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
           # 5. "docusaurus build" creates "public" folder, which is what we are deploying
-          args: deploy --dir=build --prod
+          args: deploy --dir=build
           secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
     
       - name: comment PR
