--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: "${{ steps.build_netlify.outputs.NETLIFY_LOG_URL }}"
+          msg: echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
           check_for_duplicate_msg: false  # OPTIONAL 
