--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          msg: echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
+          msg: ::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL
           check_for_duplicate_msg: false  # OPTIONAL 
