--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -1,37 +1,44 @@
-name: Build and Deploy to Netlify
+name: Deploy Staging
 
-on: [pull_request]
+on: pull_request
 
 jobs:
-  build:
-    # 2. Using the latest Ubuntu image
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the current repository code
-      - uses: actions/checkout@v1
-      # 3. https://github.com/actions/setup-node#usage
-      - uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
-      - run: yarn install
-      # This triggers `docusaurus build` script in "package.json"
-      - run: yarn run build
-        id: build_netlify
-      # 4. Deploy the docusaurus build to Netlify
-      - uses: netlify/actions/cli@master
+          node-version: "13.10"
+
+      - name: Install dependencies
+        run: yarn install
+        env:
+          CI: true
+
+      - name: Build project
+        run: yarn run build
+        env:
+          CI: true
+
+      - name: Deploy to Netlify
+        id: deploy-netlify
+        uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
-          # 5. "docusaurus build" creates "public" folder, which is what we are deploying
-          args: deploy --dir=build --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
-    
-      - name: comment PR
+          args: deploy --dir=build
+
+      - name: Netlify Preview URL
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OUTPUT: "This pull request is being automatically deployed to Netlify.\n\n🔍 Inspect: ${{ steps.deploy-netlify.outputs.NETLIFY_LOGS_URL }}\n✅ Preview: ${{ steps.deploy-netlify.outputs.NETLIFY_URL }}"
         with:
-          msg: ${{ steps.build_netlify.outputs.NETLIFY_LOGS_URL }}
-          check_for_duplicate_msg: false  # OPTIONAL 
+          msg: ${{ env.OUTPUT }}
+          check_for_duplicate_msg: false
