--- a/.github/workflows/netlify_deploy_preview.yml
+++ b/.github/workflows/netlify_deploy_preview.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build project
         run: yarn run build
 
-      - name: Deploy to Netlify
+      - name: Build deploy preview
         id: deploy-netlify
         uses: netlify/actions/cli@master
         env:
@@ -33,7 +33,7 @@ jobs:
         with:
           args: deploy --dir=build
 
-      - name: Netlify Preview URL
+      - name: Comment deploy preview URLs
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
