--- a/.github/workflows/netlify_deploy.yml
+++ b/.github/workflows/netlify_deploy.yml
@@ -38,9 +38,9 @@ jobs:
 
       - name: Deploy to Netlify
         id: deploy-netlify
-        uses: netlify/actions/cli@master
+        run: |
+          sudo yarn global add netlify-cli
+          netlify deploy --dir=build --prod
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with:
-          args: deploy --dir=build --prod
