--- a/.github/workflows/netlify_deploy_preview.yml
+++ b/.github/workflows/netlify_deploy_preview.yml
@@ -40,10 +40,19 @@ jobs:
         id: deploy-netlify
         run: |
           sudo yarn global add netlify-cli
-          netlify deploy --dir=build
+          NETLIFY_OUTPUT=$(netlify deploy --dir=build)
+          echo "::set-env name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+
+      - name: Set Netlify URL envars
+        id: netlify-envars
+        run: |
+          NETLIFY_URL=$(echo "$NETLIFY_OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*(--)[a-zA-Z0-9./?=_-]*')
+          echo "::set-env name=NETLIFY_URL::$NETLIFY_URL"
+          NETLIFY_LOGS_URL=$(echo "$NETLIFY_OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*')
+          echo "::set-env name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
 
       - name: Comment deploy preview URLs
         uses: unsplash/comment-on-pr@master
