Try outputs instead of envars

--- a/.github/workflows/netlify_deploy_preview.yml
+++ b/.github/workflows/netlify_deploy_preview.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           sudo yarn global add netlify-cli
           NETLIFY_OUTPUT=$(netlify deploy --dir=build)
-          echo "::set-env name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
+          echo "::set-output name=NETLIFY_OUTPUT::$NETLIFY_OUTPUT"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
@@ -49,16 +49,16 @@ jobs:
       - name: Set Netlify URL envars
         id: netlify-envars
         run: |
-          NETLIFY_URL=$(echo "$NETLIFY_OUTPUT" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*(--)[a-zA-Z0-9./?=_-]*')
-          echo "::set-env name=NETLIFY_URL::$NETLIFY_URL"
-          NETLIFY_LOGS_URL=$(echo "$NETLIFY_OUTPUT" | grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*')
-          echo "::set-env name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
+          NETLIFY_URL=$(echo "${{ steps.deploy-netlify.outputs.NETLIFY_OUTPUT }}" | grep -Eo '(http|https)://[a-zA-Z0-9./?=_-]*(--)[a-zA-Z0-9./?=_-]*')
+          NETLIFY_LOGS_URL=$(echo "${{ steps.deploy-netlify.outputs.NETLIFY_OUTPUT }}"| grep -Eo '(http|https)://app.netlify.com/[a-zA-Z0-9./?=_-]*')
+          echo "::set-output name=NETLIFY_URL::$NETLIFY_URL"
+          echo "::set-output name=NETLIFY_LOGS_URL::$NETLIFY_LOGS_URL"
 
       - name: Comment deploy preview URLs
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OUTPUT: "This pull request is being automatically deployed to Netlify.\n\n🔍 Inspect: ${{ steps.deploy-netlify.outputs.NETLIFY_LOGS_URL }}\n✅ Preview: ${{ steps.deploy-netlify.outputs.NETLIFY_URL }}"
+          OUTPUT: "This pull request is being automatically deployed to Netlify.\n\n🔍 Inspect: ${{ steps.netlify-envars.outputs.NETLIFY_LOGS_URL }}\n✅ Preview: ${{ steps.netlify-envars.outputs.NETLIFY_URL }}"
         with:
           msg: ${{ env.OUTPUT }}
           check_for_duplicate_msg: false
